--- a/assets/html/mission-control.html
+++ b/assets/html/mission-control.html
@@ -2,12 +2,12 @@
 <html ng-app="" ng-csp="" lang="en">
 <head>
     <meta charset="utf-8">
-    <script src="../../dependencies/javascript/angular.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../../dependencies/javascript/underscore-1.4.3.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../../dependencies/javascript/jquery-1.8.3.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../javascript/lib/angular.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../javascript/lib/underscore.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../javascript/lib/jquery.js" type="text/javascript" charset="utf-8"></script>
 
-    <script src="../js/lib.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../js/mission-control.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../javascript/lib.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../javascript/mission-control.js" type="text/javascript" charset="utf-8"></script>
 
     <title>Tab Roulette - Options</title>
     <link rel="icon" href="../images/icon_16x16.png" type="image/png">
