Reverted most of the experimental 'reactive' stuff#

--- a/assets/html/mission-control.html
+++ b/assets/html/mission-control.html
@@ -6,6 +6,7 @@
     <script src="../../javascript/lib/underscore.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../javascript/lib/jquery.js" type="text/javascript" charset="utf-8"></script>
 
+    <script src="../../javascript/define.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../javascript/common.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../javascript/settings.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../javascript/mission-control.js" type="text/javascript" charset="utf-8"></script>
