--- a/assets/html/mission-control.html
+++ b/assets/html/mission-control.html
@@ -7,7 +7,7 @@
     <script src="../../javascript/lib/jquery.js" type="text/javascript" charset="utf-8"></script>
 
     <script src="../../javascript/define.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../../javascript/common.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../javascript/tab.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../javascript/settings.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../javascript/mission-control.js" type="text/javascript" charset="utf-8"></script>
 
