Less flickering when cycling throught tabs to take screenshots

--- a/assets/html/mission-control.html
+++ b/assets/html/mission-control.html
@@ -2,6 +2,9 @@
 <html ng-app="" ng-csp="" lang="en">
 <head>
     <meta charset="utf-8">
+    <script src="../../javascript/amd-shim.js" type="text/javascript" charset="utf-8"></script>
+
+    <script src="../../javascript/lib/when.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../javascript/lib/angular.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../javascript/lib/underscore.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../javascript/lib/jquery.js" type="text/javascript" charset="utf-8"></script>
