Tab cross fade experiment

--- a/assets/html/mission-control.html
+++ b/assets/html/mission-control.html
@@ -2,12 +2,11 @@
 <html ng-app="" ng-csp="" lang="en">
 <head>
     <meta charset="utf-8">
-    <script src="../../javascript/amd-shim.js" type="text/javascript" charset="utf-8"></script>
 
-    <script src="../../javascript/lib/when.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../javascript/lib/angular.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../javascript/lib/underscore.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../javascript/lib/jquery.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../javascript/lib/async.js" type="text/javascript" charset="utf-8"></script>
 
     <script src="../../javascript/define.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../javascript/tab.js" type="text/javascript" charset="utf-8"></script>
